@@ -7,6 +7,8 @@ Silva changes
    
     Bugs fixed
 
+      - Add ZCatalog index upgrader to comply with an API change in Zope.
+
       - FSDTMLMethod and FSPageTemplate were imported directly 
         from FileSystemSite product instead of from fssite module
    
